# FlexNsg

./: .gitignore  README.md
include/efanna2e/: index.h  index_nsg_alpha.h  util.h
src/: index_nsg.cpp  index_nsg_alpha.cpp
tests/: CMakeLists.txt  test_nndescent.cpp  test_nsg_index.cpp  test_nsg_index_alpha.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp  test_nsg_search_analysis.cpp
